Convert to PostgreSQL

--- a/app/views/datasets/_form.html.erb
+++ b/app/views/datasets/_form.html.erb
@@ -46,7 +46,7 @@
   <div class="field form-group" style="width: 49%; float: left">
     <%= f.label :default_sort_column %><br>
     <%= f.text_field :default_sort_column, class: "form-control" %>
-    <p class="form-note">* This is where you set the default column you wish to sort by. Example: <strong>TotalFY13Salary</strong></p>
+    <p class="form-note">* This is where you set the default column you wish to sort by. Example: <strong>totalfy13salary</strong></p>
   </div>
 
   <div class="field form-group" style="width: 49%; float: right">
