--- a/app/views/datasets/show/4/_columnnames.html.erb
+++ b/app/views/datasets/show/4/_columnnames.html.erb
@@ -1,22 +1,24 @@
 <% @record.columns.map(&:name).each do |column_name| %>
-	<% if column_name != 'id' && column_name != 'created_at' && column_name != 'updated_at' && column_name != 'County' && column_name != 'SalaryJuly2012' %>
+	<% if column_name != 'id' && column_name != 'created_at' && column_name != 'updated_at' && column_name != 'county' && column_name != 'salaryjuly2012' %>
 		
-		<% if column_name == 'TotalFY12Salary' %>
-			<% output = 'TotalFY12Salary | Salary' %>
-		<% elsif column_name == 'TravelSubsistence' %>
-			<% output = 'TravelSubsistence | Travel' %>
+		<% if column_name == 'totalfy12salary' %>
+			<% output = column_name + ' | Salary' %>
+		<% elsif column_name == 'travelsubsistence' %>
+			<% output = column_name + ' | Travel' %>
 		<% else %>
-			<% output = column_name %>
+			<% output = column_name + ' | ' + column_name.capitalize %>
 		<% end %>
+
+		<% puts output %>
 
 		<% if type == 'th' %>
 			<th><%= sortable output %></th>
 		<% elsif type == 'td' %>
 			
-			<% if column_name == 'TotalFY12Salary' || column_name == 'TravelSubsistence' %>
-				<td class="number" data-title="<%= output %>">$<%= number_with_delimiter(record[column_name], :delimiter => ',') %></td>
+			<% if column_name == 'totalfy12salary' || column_name == 'travelsubsistence' %>
+				<td class="number" data-title="<%= output.split(" | ")[1] %>">$<%= number_with_delimiter(record[column_name], :delimiter => ',') %></td>
 			<% else %>
-				<td data-title="<%= output %>"><%= record[column_name] %></td>
+				<td data-title="<%= output.split(" | ")[1] %>"><%= record[column_name] %></td>
 			<% end %>
 		<% end %>
 	<%end %>
