--- a/app/views/datasets/show/_base/_columnnames.html.erb
+++ b/app/views/datasets/show/_base/_columnnames.html.erb
@@ -1,22 +1,29 @@
-<% @record.columns.map(&:name).each do |column_name| %>
-	<% if column_name != 'id' && column_name != 'created_at' && column_name != 'updated_at' %>
+<% excluded_columns = ['id', 'created_at', 'updated_at'] %>
 
-		<!-- Example of renaming a column -->
+<% @record.columns.map(&:name).each do |column_name| %>
+	<% if !excluded_columns.include? column_name %>
+
+		<!-- Renaming columns -->
 		<% if column_name == 'Column to rename' %>
-			<% output = 'Renamed column | Original column name' %>
+			<% output = column_name + ' | Renamed column' %>
 		<% else %>
-			<% output = column_name %>
+			<% output = column_name + ' | ' + column_name.capitalize %>
 		<% end %>
 
 		<% if type == 'th' %>
 			<th><%= sortable output %></th>
-		<% elsif type == 'td' %>
 
+		<% elsif type == 'td' %>
+		
 			<!-- Example of how to do numbers -->
 			<% if column_name == 'Column with numbers' %>
-				<td class="number" data-title="<%= output %>">$<%= number_with_delimiter(record[column_name], :delimiter => ',') %></td>
+				<td data-title="<%= output.split(" | ")[1] %>">
+					$<%= number_with_delimiter(record[column_name], :delimiter => ',') %>
+				</td>
 			<% else %>
-				<td data-title="<%= output %>"><%= record[column_name] %></td>
+				<td data-title="<%= output.split(" | ")[1] %>">
+					<%= record[column_name] %>
+				</td>
 			<% end %>
 
 		<% end %>
