--- a/app/views/datasets/index.html.erb
+++ b/app/views/datasets/index.html.erb
@@ -32,8 +32,10 @@ og: {
         </td>
         <td><%= dataset.description %></td>
         <td><%= link_to 'Show', dataset %></td>
-        <% if user_signed_in? && Rails.env.development? %>
+        <% if user_signed_in? %>
           <td><%= link_to 'Edit', edit_dataset_path(dataset) %></td>
+        <% end %>
+        <% if user_signed_in? && Rails.env.development? %>
           <td class="destroy"><%= link_to 'Destroy', dataset, method: :delete, :data => {:confirm => 'Are you sure?'} %></td>
         <% end %>
       </tr>
@@ -43,6 +45,6 @@ og: {
 
 <br>
 
-<% if user_signed_in? %>
+<% if user_signed_in? && Rails.env.development? %>
   <%= link_to 'New Dataset', new_dataset_path, class: "btn btn-primary" %>
 <% end %>
