--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,14 +3,14 @@
 <head>
 	<%= display_meta_tags %>
 	<meta property="og:type" content="article"/>
-	<meta property="og:image" content="<%= image_path('images/glogo.png') %>" />
+	<meta property="og:image" content="<%= image_path('glogo.png') %>" />
 	<meta property="twitter:site" content="@gazettedotcom">
 	<meta property="twitter:card" content="summary">
 
 	<!-- Basic -->
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
-	<link rel="shortcut icon" href="<%= image_path('images/glogo.png') %>" />
+	<link rel="shortcut icon" href="<%= image_path('glogo.png') %>" />
 
 	<!-- Mobile meta tags-->
 	<meta name="HandheldFriendly" content="True">
@@ -19,7 +19,7 @@
 	<meta name="apple-touch-fullscreen" content="yes" />
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta http-equiv="cleartype" content="on">
-	<link rel="apple-touch-icon" href="<%= image_path('images/glogo.png') %>"/>
+	<link rel="apple-touch-icon" href="<%= image_path('glogo.png') %>"/>
 	
 	<%= csrf_meta_tags %>
 
