--- a/app/views/datasets/_form.html.erb
+++ b/app/views/datasets/_form.html.erb
@@ -42,6 +42,7 @@
     <p class="form-note">* Upload make take several minutes, depending on the site of the spreadsheet. You must uploaded a CSV file. Also make sure the column names don't have spaces in them.<br />
     * Note: Rails is particular about dates. Here's a correct date format, which is available in Excel: <strong>15-Mar-2005</strong><br />
     This date equals March 15, 2005. Please convert the dates before uploading.</p>
+    * Note: Please remove commas from numbers as well. As an example: 22000 is correct, while 22,000 is not.</p>
   </div>
 
   <div class="field form-group" style="width: 49%; float: left">
