--- a/app/views/datasets/show/5/index.html.erb
+++ b/app/views/datasets/show/5/index.html.erb
@@ -19,7 +19,7 @@ og: {
     <%= render partial: 'dropdown', locals: {text: "Gender", query: @record.reorder(:gender).uniq.pluck(:gender), scope: :scope_three} %>
     <%= render partial: 'dropdown', locals: {text: "Positions", query: @record.reorder(:position).uniq.pluck(:position), scope: :scope_two} %>
     
-    <%= form_tag @dataset, class: "form-inline", :method => 'get' do %>
+    <%= form_tag @dataset, class: "form-search form-inline", :method => 'get' do %>
       <p>
         <%= text_field_tag :search, params[:search], class: "form-control" %>
         <%= submit_tag "Search Name", :name => nil, class: "btn btn-default" %>
