Remove duplicate names

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,8 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta http-equiv="cleartype" content="on">
 	<link rel="apple-touch-icon" href="<%= image_path('glogo.png') %>"/>
-	
+	<link rel="screenshot" href="<%= image_path('screenshots/05-ss.jpg') %>"/>
+
 	<%= csrf_meta_tags %>
 
 	<!-- CSS -->
