--- a/app/views/datasets/_search.html.erb
+++ b/app/views/datasets/_search.html.erb
@@ -1,7 +1,7 @@
 <%= form_tag @dataset, class: "form-search form-inline", :method => 'get' do %>
 	<p>
 	  <%= text_field_tag :search, params[:search], class: "form-control" %>
-	  <%= submit_tag "Search Name", :name => nil, class: "btn btn-default" %>
+	  <%= submit_tag text, :name => nil, class: "btn btn-default" %>
 	</p>
 
    <% if !params[:search].nil? %>
