--- a/app/views/datasets/show/3/index.html.erb
+++ b/app/views/datasets/show/3/index.html.erb
@@ -15,9 +15,13 @@ og: {
 <div id="content-box">
   <p id="first-p" class="intro-text"><%= @dataset.description %></p>
   <div id="table-container">
-    <%= render partial: 'dropdown', locals: {text: "Departments", query: @record.reorder(:department).uniq.pluck(:department), scope: :scope_one} %>
-    <%= render partial: 'dropdown', locals: {text: "Positions", query: @record.reorder(:position).uniq.pluck(:position), scope: :scope_two} %>
-    <%= render partial: 'dropdown', locals: {text: "Gender", query: @record.reorder(:gender).uniq.pluck(:gender), scope: :scope_three} %>
+    <% @dataset.filterable_columns.split(',').each do |filter|%>
+      <%= render partial: 'dropdown', locals: {text: filter, query: @record.reorder(filter).uniq.pluck(filter), scope: filter} %>
+    <% end %>
+      
+    <% if !@dataset.searchable_column.nil? %>
+      <%= render partial: 'search', locals: {text: @dataset.searchable_column} %>
+    <% end %>
 
     <table id="table" class="table">
       <thead>
