--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -89,7 +89,7 @@
 			</div>
 
 			<div id="footer">
-				All content copyright 2014, Gazette Communications, 500 Third Avenue SE, Cedar Rapids, Iowa 52401. Read <a href="http://thegazette.com/about-us/">more about us</a> or <a href="mailto:ustomercare@sourcemedia.net">e-mail us</a>.
+				All content copyright 2015, Gazette Communications, 500 Third Avenue SE, Cedar Rapids, Iowa 52401. Read <a href="http://thegazette.com/about-us/">more about us</a> or <a href="mailto:ustomercare@sourcemedia.net">e-mail us</a>.
 			</div>
 		</div>
 
@@ -122,6 +122,9 @@
 		</script>
 
 		<!-- JS -->
+		<script>
+			var pymChild;
+		</script>
 		<%= javascript_include_tag 'application' + params[:id].to_s %>
 </body>
 </html>
