--- a/app/views/datasets/show/5/index.html.erb
+++ b/app/views/datasets/show/5/index.html.erb
@@ -6,11 +6,12 @@ keywords: %w[salaries iowa 2015],
 canonical: "",
 og: {
   title: @dataset.dataset_name,
-  url: ""
+  url: "https://gadatabases.herokuapp.com/datasets/" + @dataset.id.to_s
 }
 %>
 
 <%= render 'header' %>
+<%= render 'embed' %>
 
 <div id="content-box">
   <p id="first-p" class="intro-text"><%= @dataset.description %></p>
