Allow more view options on DBs through forms

--- a/app/views/datasets/show/_base/index.html.erb
+++ b/app/views/datasets/show/_base/index.html.erb
@@ -6,7 +6,7 @@ keywords: %w[salaries iowa 2014],
 canonical: "",
 og: {
   title: @dataset.dataset_name,
-  url: ""
+  url: "https://gadatabases.herokuapp.com/datasets/" + @dataset.id.to_s
 }
 %>
 
