--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <head>
 	<%= display_meta_tags %>
 	<meta property="og:type" content="article" />
-	<meta property="og:image" content="https://gadatabases.herokuapp.com<%= image_path('glogo.png') %>" />
+	<meta property="og:image" content="https://gadatabases.herokuapp.com<%= image_path('datacenter-icon.png') %>" />
 	<meta property="twitter:site" content="@gazettedotcom">
 	<meta property="twitter:card" content="summary">
 
