--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -88,7 +88,7 @@
 
 			</div>
 
-			<div id="footer">
+			<div id="footer" class="footer-bottom">
 				All content copyright 2015, Gazette Communications, 500 Third Avenue SE, Cedar Rapids, Iowa 52401. Read <a href="http://thegazette.com/about-us/">more about us</a> or <a href="mailto:ustomercare@sourcemedia.net">e-mail us</a>.
 			</div>
 		</div>
