--- a/app/assets/stylesheets/record5/base.scss
+++ b/app/assets/stylesheets/record5/base.scss
@@ -342,6 +342,37 @@ div.dataTables_wrapper div.dataTables_filter {
   }
 }
 
+/* Embeds */
+.embed-chart {
+  clear: both;
+  text-align: right;
+
+  a {
+    padding: 5px 11px;
+    background-color: #777;
+    color: #FFF;
+  }
+
+  a:hover {
+    text-decoration: none;
+    background-color: #555; 
+  }
+
+  a:focus {
+    text-decoration: none;
+  }
+
+  textarea {
+    z-index: 2;
+    position: absolute;
+    margin-top: 25px;
+    box-shadow: 0 12px 12px 0 #ccc;
+    width: 300px;
+    padding: 8px 12px;
+    border-radius: 0px;
+  }
+}
+
 @media (max-width: 1050px) {
   .header h1 {
       text-align: center;
