--- a/app/views/datasets/_embed.html.erb
+++ b/app/views/datasets/_embed.html.erb
@@ -1,4 +1,4 @@
-<div id="embed-box">
+<div class="embed-chart">
 	<a href="#" class="text">Embed this database</a>
-	<textarea class="hide-desktop" rows="6" cols="75">"<div class="center"><h2><%= @dataset.dataset_name %></h2><div id="game-embed-{{id}}-{{num}}"></div><scr{{!}}ipt type="text/javascript">var pymParent = new pym.Parent('game-embed-{{id}}-{{num}}','{{url}}{{iframe_hash}}', {});</scr{{!}}ipt><p class="embed-subhead"><table><tbody><tr><td style="padding:8px;2px;width:25%;"><a href="http://www.thegazette.com/data/hawkeyes" target="_blank"><img src="/Includes/data/projects/hawkeyes/icons/ifdc-logo_gazette.png" height="50px" alt=""></td><td style="padding:8px;2px;font-size:11px;">For a more detailed breakdown of this game, <a href="{{url}}{{hash}}" target="_blank">click here</a>.</td></tr></tbody></table></p></div>"</textarea>
+	<textarea class="hide-desktop" rows="6" cols="75"><div class="center"><h2><%= @dataset.dataset_name %></h2><div class="center"><iframe frameborder="0" height="450" src="https://gadatabases.herokuapp.com/datasets/<%= @dataset.id %>" width="100%"></iframe></div></textarea>
 </div>
