--- a/app/views/datasets/_embed.html.erb
+++ b/app/views/datasets/_embed.html.erb
@@ -1,4 +1,4 @@
-<div class="embed-chart">
+<div class="embed-chart hide-650">
 	<a href="#" class="text">Embed this database</a>
 	<textarea class="hide-desktop" rows="6" cols="75"><div class="center"><h2><%= @dataset.dataset_name %></h2><div class="center"><iframe frameborder="0" height="450" src="https://gadatabases.herokuapp.com/datasets/<%= @dataset.id %>" width="100%"></iframe></div></textarea>
 </div>
