--- a/app/assets/stylesheets/record5/base.scss
+++ b/app/assets/stylesheets/record5/base.scss
@@ -468,7 +468,14 @@ div.dataTables_wrapper div.dataTables_filter {
 
       input:nth-of-type(2) {
         float: left;
-        margin-left: 5px;
+        margin-left: 0%;
+        width: 75%;
+      }
+
+      input:nth-of-type(3) {
+        float: right;
+        margin-left: 1%;
+        width: 24%;
       }
     }
   }
@@ -562,8 +569,20 @@ div.dataTables_wrapper div.dataTables_filter {
     }
   }
 
-  #table-container .form-search p input:nth-of-type(1) {
-    width: auto;
+  #table-container .form-search {
+    p {
+      input:nth-of-type(2) {
+        float: left;
+        margin-left: 0%;
+        width: 40%;
+      }
+
+      input:nth-of-type(3) {
+        float: left;
+        margin-left: 1%;
+        width: 39%;
+      }
+    }
   }
 }
 
