--- a/app/assets/stylesheets/record5/base.scss
+++ b/app/assets/stylesheets/record5/base.scss
@@ -456,23 +456,23 @@ div.dataTables_wrapper div.dataTables_filter {
     float: left;
     width: 100%;
     margin-top: 15px;
+    
+    a {
+      margin-left: 15px;
+      margin-right: 0px;
+    }
 
     p {
       float: left;
-      width: 100%;
+      width: 80%;
 
-      input:nth-of-type(1) {
-        float: left;
-        width: 75%;
-      }
-
-      input:nth-of-type(2) {
+      #search {
         float: left;
         margin-left: 0%;
         width: 75%;
       }
 
-      input:nth-of-type(3) {
+      .btn {
         float: right;
         margin-left: 1%;
         width: 24%;
@@ -562,22 +562,22 @@ div.dataTables_wrapper div.dataTables_filter {
     .dropdown-menu > li > a {
       padding: 6px 20px
     }
+  }
 
-    .glyphicon {
-      font-size: 20px;
-      margin-left: 10px;
-    }
+  .glyphicon {
+    font-size: 20px;
+    margin-left: 10px;
   }
 
   #table-container .form-search {
     p {
-      input:nth-of-type(2) {
+      #search {
         float: left;
         margin-left: 0%;
-        width: 40%;
+        width: 60%;
       }
 
-      input:nth-of-type(3) {
+      .btn {
         float: left;
         margin-left: 1%;
         width: 39%;
