--- a/app/views/datasets/_footer.html.erb
+++ b/app/views/datasets/_footer.html.erb
@@ -1,5 +1,5 @@
 </div>
 
-<div id="footer" class="header hide-desktop show-mobile">
+<div id="footer" class="footer-scroll header hide-desktop show-mobile">
 	<a href="#">Scroll to top</a>
 </div>
