--- a/app/assets/stylesheets/application7.scss
+++ b/app/assets/stylesheets/application7.scss
@@ -3,3 +3,8 @@
 	*= require record7/base
 	*= require record7/base-datatable
 	*/
+/*
+	*= require application
+	*= require record7/base
+	*= require record7/base-datatable
+	*/
