--- a/app/views/datasets/show/7/_columnnames.html.erb
+++ b/app/views/datasets/show/7/_columnnames.html.erb
@@ -16,7 +16,7 @@
 		<% elsif type == 'td' %>
 		
 			<!-- Example of how to do numbers -->
-			<% if column_name == 'Column with numbers' %>
+			<% if column_name == 'salary' || column_name == 'travel' %>
 				<td class="number" data-title="<%= output.split(" | ")[1] %>">
 					$<%= number_with_delimiter(record[column_name], :delimiter => ',') %>
 				</td>
