--- a/app/views/datasets/show/7/index.html.erb
+++ b/app/views/datasets/show/7/index.html.erb
@@ -13,6 +13,7 @@ og: {
 <%= render 'header' %>
 
 <div id="content-box">
+  <%= render 'embed' %>
   <p id="first-p" class="intro-text"><%= @dataset.description %></p>
   <%= render 'table' %>
 </div>
