Add 2015 traffic data

--- a/app/views/datasets/show/2/index.html.erb
+++ b/app/views/datasets/show/2/index.html.erb
@@ -12,6 +12,7 @@ og: {
 
 <%= render 'header' %>
 <div id="content-box">
+  <%= render 'embed' %>
   <p id="first-p" class="intro-text"><%= @dataset.description %></p>
   <div id="table-container">
     <% @dataset.filterable_columns.split(',').each do |filter|%>
