--- a/app/views/datasets/show/2/index.html.erb
+++ b/app/views/datasets/show/2/index.html.erb
@@ -27,22 +27,22 @@ og: {
       <thead>
         <tr>
         	<th><%= sortable "name | Name" %></th>
-          <th><%= sortable "citationtype | Citation" %></th>
+          <th><%= sortable "city | City" %></th>
           <th><%= sortable "violationdate | Date" %></th>
+          <th><%= sortable "citationtype | Citation" %></th>
           <th><%= sortable "intersectiondetails | Intersection" %></th>
           <th><%= sortable "speed | Speed" %></th>
-          <th><%= sortable "city | City" %></th>
         </tr>
       </thead>
       <tbody>
       	<% @record.paginate(:page => params[:page]).each do |record| %>
           <tr>
             <td data-title="Name:"><%= record["name"] %></td>
-            <td data-title="Citation:"><%= record["citationtype"] %></td>
+            <td data-title="City:"><%= record["city"] %>, <%= record["state"] %></td>
             <td data-title="Date:"><%= record["violationdate"] %></td>
+            <td data-title="Citation:"><%= record["citationtype"] %></td>
             <td data-title="Intersection:"><%= record["intersectiondetails"] %></td>
             <td class="number" data-title="Speed":><%= record["speed"] %></td>
-            <td data-title="City:"><%= record["city"] %></td>
           </tr>
       	<% end %>
     	</tbody>
